Added in person page and css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 
   <nav class="location">
-  <a href="#" class="north button">NORTH</a>
+  <a href="in_person.html" class="north button">in person</a>
   <a href="#" class="west button">WEST</a>
   <a href="#" class="east button">EAST</a>
   <a href="#" class="south button">SOUTH</a>
