--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <title>Coding in London</title>
 
-  <script src="main.js"></script> <!-- JS -->
   <link rel="stylesheet" type="text/css" href="css/style.css">  <!-- CSS -->
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"><!-- FONT AWESOME -->
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300i|Muli:300|Chivo:900|Raleway:300" rel="stylesheet"><!-- GOOGLE FONTS-->
@@ -25,17 +24,15 @@
   <div class="aboutUs">
   <h2>About Us</h2>
   <p>
-    We took part in the Code First Girls Beginners Autumn Class and decided to
-    make a website with usefule resources and classes in London that you can
+    We took part in the Code First: Girls Beginners Autumn/Winter Class and decided to
+    make a website with useful resources and classes in London that you can
     take part in (for free) to learn web development. Have fun.
   </p>
   </div>
 
   <nav class="location">
-  <a href="in_person.html" class="north button">in person</a>
-  <a href="#" class="west button">WEST</a>
-  <a href="#" class="east button">EAST</a>
-  <a href="#" class="south button">SOUTH</a>
+  <a href="inperson.html" class="inPerson button">LONDON CLASSES</a>
+  <a href="online.html" class="onlineClass button">ONLINE CLASSES</a>
 </nav>
 
 </section><!-- END OF INFO -->
