Corrected linking to in person page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 
   <nav class="location">
-  <a href="inperson.html" class="inPerson button">LONDON CLASSES</a>
+  <a href="in_person.html" class="inPerson button">LONDON CLASSES</a>
   <a href="online.html" class="onlineClass button">ONLINE CLASSES</a>
 </nav>
 
